--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "react-select",
-  "version": "1.2.0",
+  "version": "1.2.0-fix",
   "description": "A Select control built with and for ReactJS",
   "main": "lib/index.js",
   "jsnext:main": "dist/react-select.es.js",
@@ -15,7 +15,7 @@
   "dependencies": {
     "classnames": "^2.2.4",
     "prop-types": "^15.5.8",
-    "react-input-autosize": "^2.1.2"
+    "react-input-autosize": "2.1.2"
   },
   "devDependencies": {
     "babel-cli": "^6.26.0",
